# swagger (1).yaml
@@ -42,6 +42,29 @@ paths:
           description: Already Exists
           schema:
             $ref: "#/definitions/ErrorResponse"
+            
+    delete:
+      description: |
+        Delete an entire Addressbook
+        
+      parameters:
+        - in: path
+          name: name
+          description: Name of the Addressbook
+          type: string
+          required: true
+          
+      responses:
+        201:
+          description: Successful responses
+        405:
+          description: Invalid Input
+          schema:
+            $ref: "#/definitions/ErrorResponse"
+        500:
+          description: Server Error
+          schema:
+            $ref: "#/definitions/ErrorResponse"
           
   # This is a path endpoint. Change it.
   /addressbooks/{name}:
